--- a/res/menu/container.xml
+++ b/res/menu/container.xml
@@ -1,8 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <!-- <item android:id="@+id/action_websearch"
-          android:icon="@drawable/action_search"
-          android:title="@string/action_websearch"
-          android:showAsAction="ifRoom|withText" /> -->
-
+    <item android:id="@+id/action_music_player"
+          android:icon="@drawable/ic_music_note"
+          android:title="@string/action_music_player"
+          android:showAsAction="always" />
 </menu>
