--- a/res/layout/menu_container.xml
+++ b/res/layout/menu_container.xml
@@ -2,15 +2,14 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+    
+    <!-- The main content -->
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content"
-        android:layout_width="match_parent"         
-        android:layout_height="match_parent" >
-    </RelativeLayout>
+    <FrameLayout
+       android:id="@+id/currentFragment"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+    />
 
     <!-- The navigation drawer -->
 
