--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -14,6 +14,7 @@
   limitations under the License.
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/live_tracking"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="16dp"
