added map to live tracking page

--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -13,16 +13,40 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/live_tracking"
+
+
+
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tableLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp" >
-    <Button android:id="@+id/tracking"
+    android:stretchColumns="*" >
+    
+    <TableRow
+        android:id="@+id/tableRow2"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="@string/start_new_workout"
-        android:onClick="changeTrackingState"  />
-</RelativeLayout>
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
+       	<com.google.android.gms.maps.MapView
+		   xmlns:android="http://schemas.android.com/apk/res/android"
+		   android:id="@+id/mapView"/>
+
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0" >
+    	<Button android:id="@+id/tracking"
+		   android:text="@string/start_new_workout"
+		   android:onClick="changeTrackingState"/>   
+
+    </TableRow>
+    
+
+</TableLayout>
+
+
+
