--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -26,7 +26,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="@string/start_new_workout"
-        android:onClick="changeTrackingState"  />
+        android:text="@string/start_new_workout" />
 </RelativeLayout>
 
