--- a/res/layout/achievements_list_element.xml
+++ b/res/layout/achievements_list_element.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/achievement_list_element"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:orientation="horizontal">
-	<ImageView
-		android:id="@+id/icon"
-		android:contentDescription="@string/achievements_icon_default"
-		android:layout_width="30dp"
-		android:layout_height="30dp"
-		android:layout_margin="5dp"
-		android:src="@drawable/ic_trophy"/>
-	<LinearLayout
-	    android:id="@+id/achievement_list_seperator"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical">
-		<TextView
-			android:id="@+id/achievement_name"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center" />
-		<TextView
-			android:id="@+id/achievement_description"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center" />
-	</LinearLayout>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
+
+    <ImageView
+        android:id="@+id/achievement_icon"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_weight="1"
+        android:contentDescription="@string/achievements_icon_default" />
+
+    <LinearLayout
+        android:id="@+id/achievement_list_seperator"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/achievement_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textColor="#FFFFFF"
+            android:textSize="21sp" />
+
+        <TextView
+            android:id="@+id/achievement_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textColor="#888888"
+            android:textSize="15sp" />
+    </LinearLayout>
+
 </LinearLayout>
