--- a/res/layout/achievements_list_group.xml
+++ b/res/layout/achievements_list_group.xml
@@ -4,11 +4,17 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp" >
+
     <TextView
         android:id="@+id/achievement_list_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17sp"
-        android:textColor="#BBBBBB" />
+        android:layout_height="45dp" 
+        android:gravity="center"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"      
+        android:textColor="#BBBBBB"
+        android:textSize="18sp" />
+<!--  
+	android:layout_marginBottom="100dp"
+    android:layout_marginTop="100dp"    
+-->
 </LinearLayout>
