--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -27,5 +27,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="@string/start_new_workout" />
+    
+     <org.osmdroid.views.MapView
+         android:id="@+id/mapview"
+         android:layout_width="match_parent"
+         android:layout_height="fill_parent"
+         android:layout_below="@+id/tracking"
+         tilesource="Mapnik" />
+
 </RelativeLayout>
 
