--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -39,10 +39,28 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
 	        android:layout_weight="1"
-	        android:orientation="horizontal" >
+	        android:orientation="horizontal"
+	        android:background="@drawable/live_timing_background" >
+	        
+    	    <FrameLayout 
+    	        android:layout_width="match_parent"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="3"
+    	        />
+
     		<include layout="@layout/live_tracking_fragment_element"
     		    android:id="@+id/workout_element_0"
-    		    android:padding="100dp" />
+    		    android:layout_width="match_parent"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="2"
+    		    android:background="#FFFFFF" />
+    		
+    		<FrameLayout 
+    	        android:layout_width="match_parent"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="3"
+    	        />
+
     	</LinearLayout>
     	<LinearLayout
 	        android:id="@+id/workout_row_1"
@@ -50,10 +68,22 @@
 	        android:layout_height="match_parent"
 	        android:layout_weight="1"
 	        android:orientation="horizontal" >
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_1" />
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_2" />
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_1" />
+    		</RelativeLayout>
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_2" />
+    		</RelativeLayout>
     	</LinearLayout>
     	<LinearLayout
 	        android:id="@+id/workout_row_2"
@@ -61,10 +91,22 @@
 	        android:layout_height="match_parent"
 	        android:layout_weight="1"
 	        android:orientation="horizontal" >
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_3" />
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_4" />
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_3" />
+    		</RelativeLayout>
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_4" />
+    		</RelativeLayout>
     	</LinearLayout>
     	<LinearLayout
 	        android:id="@+id/workout_row_3"
@@ -72,10 +114,22 @@
 	        android:layout_height="match_parent"
 	        android:layout_weight="1"
 	        android:orientation="horizontal" >
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_5" />
-    		<include layout="@layout/live_tracking_fragment_element"
-    		    android:id="@+id/workout_element_6" />
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_5" />
+    		</RelativeLayout>
+    		<RelativeLayout
+    		    android:layout_width="0dp"
+	        	android:layout_height="match_parent"
+	        	android:layout_weight="1"
+    		    android:background="@drawable/live_timing_background" >
+	    		<include layout="@layout/live_tracking_fragment_element"
+	    		    android:id="@+id/workout_element_6" />
+    		</RelativeLayout>
     	</LinearLayout>
     </LinearLayout>
     
