--- a/res/layout/live_tracking_fragment.xml
+++ b/res/layout/live_tracking_fragment.xml
@@ -52,8 +52,7 @@
     		    android:id="@+id/workout_element_0"
     		    android:layout_width="match_parent"
 	        	android:layout_height="match_parent"
-	        	android:layout_weight="2"
-    		    android:background="#FFFFFF" />
+	        	android:layout_weight="1" />
     		
     		<FrameLayout 
     	        android:layout_width="match_parent"
