--- a/res/layout/evaluation_summary_fragment.xml
+++ b/res/layout/evaluation_summary_fragment.xml
@@ -3,13 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
- 
-    <TextView
-        android:id="@+id/detailsText2"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="20dip"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <ListView
+    android:id="@+id/evaluation"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"/>
  
 </LinearLayout>
