--- a/res/layout/evaluation_row.xml
+++ b/res/layout/evaluation_row.xml
@@ -7,11 +7,11 @@
      android:orientation="horizontal">
  
      <TextView android:id="@+id/key"
-         android:layout_width="50dip"
+         android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
  
      <TextView android:id="@+id/value"
-         android:layout_width="70dip"
+         android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:layout_weight="1"/>
  
 </LinearLayout>
