--- a/res/layout/evaluation_row.xml
+++ b/res/layout/evaluation_row.xml
@@ -8,10 +8,11 @@
  
      <TextView android:id="@+id/key"
          android:layout_width="wrap_content"
-         android:layout_height="wrap_content"/>
+         android:layout_height="60dp"
+         android:layout_margin="20dp"/>
  
      <TextView android:id="@+id/value"
          android:layout_width="wrap_content"
-         android:layout_height="wrap_content" android:layout_weight="1"/>
+         android:layout_height="60dp" />
  
 </LinearLayout>
