--- a/res/layout/total_evaluation_fragment.xml
+++ b/res/layout/total_evaluation_fragment.xml
@@ -18,13 +18,9 @@
     android:layout_height="fill_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp" >
-    <TextView 
-	    android:id="@+id/summorized_tracking_data"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"/>
     
   	<ListView
-        android:id="@+id/tracking_list"
+        android:id="@+id/total_evaluation"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
     </ListView>
