--- a/res/layout/evaluation_row.xml
+++ b/res/layout/evaluation_row.xml
@@ -8,11 +8,12 @@
  
      <TextView android:id="@+id/key"
          android:layout_width="wrap_content"
-         android:layout_height="60dp"
+         android:layout_height="30dp"
          android:layout_margin="20dp"/>
  
      <TextView android:id="@+id/value"
          android:layout_width="wrap_content"
-         android:layout_height="60dp" />
+         android:layout_height="30dp" 
+         android:layout_margin="20dp"/>
  
 </LinearLayout>
