--- a/res/layout/evaluation_stages_fragment.xml
+++ b/res/layout/evaluation_stages_fragment.xml
@@ -3,13 +3,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+    	android:layout_weight="1"
+    	android:layout_margin="10dp"
+	    android:orientation="horizontal" >
+    	<LinearLayout 
+    	    android:layout_width="0dp"
+		    android:layout_height="match_parent"
+		    android:layout_weight="1"
+		    android:orientation="vertical">
+    	    <TextView 
+    	        android:layout_width="match_parent"
+    			android:layout_height="0dp"
+    			android:layout_weight="1"
+    			android:gravity="center"
+    			android:background="@drawable/background_border"
+    			android:text="Schn. Abschnitt"/>
+    	    <TextView 
+    	        android:layout_width="match_parent"
+    			android:layout_height="0dp"
+    			android:layout_weight="1"
+    			android:gravity="center"
+    			android:background="@drawable/background_border"
+    			android:text="00:00:00"/>
+    	</LinearLayout>
+    	<LinearLayout 
+    	    android:layout_width="0dp"
+		    android:layout_height="match_parent"
+		    android:layout_weight="1"
+		    android:orientation="vertical">
+    	    <TextView 
+    	        android:layout_width="match_parent"
+    			android:layout_height="0dp"
+    			android:layout_weight="1"
+    			android:gravity="center"
+    			android:background="@drawable/background_border"
+    			android:text="Langs. Abschnitt"/>
+    	    <TextView 
+    	        android:layout_width="match_parent"
+    			android:layout_height="0dp"
+    			android:layout_weight="1"
+    			android:gravity="center"
+    			android:background="@drawable/background_border"
+    			android:text="00:00:00"/>
+    	</LinearLayout>
+    </LinearLayout>
  
-    <TextView
-        android:id="@+id/detailsText1"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="20dip"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <ListView
+        android:id="@+id/stages_list"
+        android:layout_width="match_parent"
+    	android:layout_height="0dp"
+    	android:layout_weight="3"
+    	android:layout_margin="10dp" />
  
 </LinearLayout>
