--- a/res/drawable/live_timing_background.xml
+++ b/res/drawable/live_timing_background.xml
@@ -8,5 +8,8 @@
       android:bottomLeftRadius="0dp" />
   <stroke
       android:width="1dp"
-      android:color="@android:color/background_light" />
+      android:color="@android:color/background_dark" />
+  <solid 
+      android:color="#DDDDDD"
+      />
 </shape>
