--- a/res/layout/total_evaluation_row.xml
+++ b/res/layout/total_evaluation_row.xml
@@ -9,41 +9,47 @@
     <ImageView
 		android:id="@+id/calender_icon"
 		android:contentDescription="@string/icon_default"
-		android:layout_width="30dp"
+		android:layout_width="0dp"
+		android:layout_weight="1"
 		android:layout_height="30dp"
 		android:layout_margin="5dp"
 		android:src="@drawable/calender"/>
     
     
      <TextView android:id="@+id/date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+		android:layout_weight="3"
         android:layout_height="30dp"
         android:layout_margin="20dp"/>
      
      <ImageView
 		android:id="@+id/road_icon"
 		android:contentDescription="@string/icon_default"
-		android:layout_width="30dp"
+		android:layout_width="0dp"
+		android:layout_weight="1"
 		android:layout_height="30dp"
 		android:layout_margin="5dp"
 		android:src="@drawable/road"/>
      
  
      <TextView android:id="@+id/distance"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+		android:layout_weight="3"
         android:layout_height="30dp"
         android:layout_margin="20dp" />
      
      <ImageView
 		android:id="@+id/clock_icon"
 		android:contentDescription="@string/icon_default"
-		android:layout_width="30dp"
+		android:layout_width="0dp"
+		android:layout_weight="1"
 		android:layout_height="30dp"
 		android:layout_margin="5dp"
 		android:src="@drawable/clock"/>
      
       <TextView android:id="@+id/duration"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+		android:layout_weight="3"	
         android:layout_height="30dp"
         android:layout_margin="20dp" />
      
